# firecrawl_cli

./: .env  Cargo.toml
output/: example-domain.html  example-domain.json  example-domain.md  scrape-firecrawl-docs.html  scrape-firecrawl-docs.json  scrape-firecrawl-docs.md
src/: cli.rs  lib.rs  main.rs  tmp.rs  utils.rs
src/api/: client_builder.rs  mod.rs
src/api/models/: crawl_model.rs  mod.rs  scrape_model.rs
src/api/services/: client.rs
src/commands/: crawl_command.rs  mod.rs  scrape_command.rs  task_queue.rs
src/config/: environment.rs  loader.rs  mod.rs
src/errors/: mod.rs
src/services/: api_service.rs  cache_service.rs  file_service.rs  mod.rs  progress_service.rs  task_service.rs
src/storage/: content_saver.rs  errors.rs  mod.rs  repository.rs
src/storage/content_saver/: savers.rs
src/tui/: app.rs  events.rs  mod.rs  runner.rs  ui.rs
