[package]
name = "firecrawl_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0"
slug = "0.1.5"
