[package]
name = "firecrawl_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.52", features = ["derive", "env"] }
anyhow = "1.0.100"
slug = "0.1.6"
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ratatui = "0.29.0"
crossterm = "0.28.1"
