[package]
name = "firecrawl_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env"] }
anyhow = "1.0.100"
slug = "0.1.6"
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = [
  "json",
  "cookies",
  "gzip",
  "brotli",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ratatui = "0.29.0"
crossterm = "0.29"
thiserror = "2.0.17"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
toml = "0.9.8"
serde_yaml = "0.9.34"
dirs = "6.0.0"
log = "0.4.28"
